# final-project

./: .gitignore  CMakeLists.txt  Readme.md
data/environment/: Ground.rbs
data/meshes/3d models/car/: Futuristic_Car.mtl  Leftwheel.mtl
data/robots/bip/: bip.rbs
data/robots/frankaPanda/: frankaPanda.rbs
data/robots/frankaPanda/meshes/: FrankaPanda_link7.mtl
data/robots/kinovaGen3/: kinovaGen3.rbs  kinovaGen3.rs  kinovaGen3OnSpotBase.rbs  kinovaGen3OnSpotBase.rs
data/robots/laikago/: laikago.rbs  laikago_frozen.rbs  laikago_frozen.rs  laikago_gray.rbs  laikago_old.rbs  laikago_zero.rs
data/robots/legBot/: legBot.json  legBot.rbs
data/robots/simple/: dog.rbs  hex.rbs
data/robots/spot/: spot.rbs  spot.rs  spotWithKinovaGen3.rbs  spotWithKinovaGen3.rs
data/robots/ur5e/: ur5e.rbs  ur5e_state.rs
data/robots/ur5e/meshes/: eSeries_UR5e_baseNoCable.mtl  eSeries_UR5e_link1.mtl  eSeries_UR5e_link2.mtl  eSeries_UR5e_link3.mtl  eSeries_UR5e_link4.mtl  eSeries_UR5e_link5.mtl  eSeries_UR5e_link6.mtl
data/robots/yumi/: yumi.rbs  yumi_state.rs
data/robots/yumi/meshes/: IRB14000_GRIPPER_rev00_BASE.mtl  IRB14000_GRIPPER_rev00_Tool1_Finger1.mtl  IRB14000_rev00_BASE.mtl  IRB14000_rev00_Link1_L.mtl  IRB14000_rev00_Link1_R.mtl  IRB14000_rev00_Link2_L.mtl  IRB14000_rev00_Link2_R.mtl  IRB14000_rev00_Link4_L.mtl  IRB14000_rev00_Link6_R.mtl  IRB14000_rev00_Link7_R.mtl
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.h  main.cpp
src/gui/: CMakeLists.txt
src/gui/include/gui/: application.h  camera.h  guiMath.h  light.h  mesh.h  model.h  renderer.h  shader.h  shadow_casting_light.h  shadow_map_fbo.h
src/gui/shaders/: basic_shadow_lighting.frag
src/gui/src/: ImGuizmo.cpp  application.cpp  imGuIZMOquat.cpp  model.cpp  shadow_map_fbo.cpp
src/optLib/: CMakeLists.txt
src/optLib/include/eiquadprog/: eiquadprog.hpp
src/optLib/include/ooqp/: OoqpEigenInterface.hpp  ooqpei_assert_macros.hpp  ooqpei_numerical_comparisons.hpp
src/optLib/include/optLib/: AutoDiff.h  ConstrainedObjectiveFunction.h  GradientDescentMinimizer.h  LBFGSMinimizer.h  NewtonMinimizer.h  ObjectiveFunction.h  ObjectiveFunctionMinimizer.h  SQPMinimizer.h  SoftUnilateralConstraint.h  StochasticMinimizer.h
src/optLib/src/: ConstrainedObjectiveFunction.cpp  ObjectiveFunction.cpp  OoqpEigenInterface.cpp  SQPMinimizer.cpp  SoftUnilateralConstraint.cpp
src/robotControlLib/: CMakeLists.txt
src/robotControlLib/robot/: GeneralizedCoordinatesRobotRepresentation.cpp  GeneralizedCoordinatesRobotRepresentation.h  RBEngine.cpp  RBEngine.h  RBJoint.cpp  RBJoint.h  RBLoader.cpp  RBLoader.h  RBProperties.cpp  RBProperties.h  RBRenderer.cpp  RBRenderer.h  RBSaver.h  RBState.h  RBUtils.cpp  RBUtils.h  Robot.cpp  Robot.h  RobotRB.cpp  RobotRB.h  RobotState.cpp  RobotState.h
src/simLib/: CMakeLists.txt
src/simLib/include/ode/: ContactForce.h  ODERBEngine.h
src/simLib/src/: ODERBEngine.cpp
src/utils/: CMakeLists.txt
src/utils/include/utils/: json_helpers.h  logger.h  mathDefs.h  mathUtils.h  plane.h  ray.h  segment.h  timer.h  trajectory.h  transformation.h  utils.h
src/utils/src/: logger.cpp  timer.cpp
